improved coverage and use interface rather than abstract class for FieldClockModel